add margin-top to footer

--- a/css/style.css
+++ b/css/style.css
@@ -198,4 +198,8 @@ a.cta:hover {
   color: #e882e8;
   border-color: #e882e8;
 }
+
+.footer .attribution {
+  margin-top: 40px;
+}
 /*# sourceMappingURL=style.css.map */
